# MCP-Server-Unified-Deployment

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.trunk/: trunk.yaml
config/: mcp_cline_settings_for_Cline_and_RooCode.json  mcp_servers.example.json  mcp_servers.example.yaml
docker/: .dockerignore  Dockerfile  README.md  container_startup.py  docker-compose.yml  entrypoint.sh
docker-dev/: Dockerfile  docker-compose.yml
docker-dev/.devcontainer/: devcontainer.json
docker/nginx/: nginx.conf
scripts/: container_startup.py  detect_host_ip.py  generate_nginx_configs.py  integrate_config_generator.py  manage_mcp.py  setup_env.py
scripts/mcp_manager/: __init__.py  commands.py  config.py  process_utils.py
